--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,102 +1,115 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">MyMoney</string>
-    <string name="repository_file_name">db.sqlite</string>
-    <string name="loading_dialog_text">Ожидайте завершения операции</string>
-    <string name="permission_not_granted">Разрешение не предоставлено</string>
-    <string name="success">Успех</string>
-    <string name="export_to">Експорт в </string>
-    <string name="import_from">Импорт из </string>
-    <string name="menu_actions">Транзакции</string>
-    <string name="menu_draft">Черновик</string>
-    <string name="menu_dictionaries">Справочники</string>
-    <string name="menu_import_export">Импорт/Експорт</string>
-    <string name="menu_statistics">Статистика</string>
-    <string name="menu_statistics_monthly">Статистика за месяц</string>
-    <string name="import_button_label">Импорт файла БД</string>
-    <string name="export_button_label">Експорт файла БД</string>
-    <string name="error_open_destination_file">Невозможно открыть файл </string>
-    <string name="error_create_destination_directories">Невозможно создать директорию </string>
-    <string name="cause">Причина:</string>
-    <string name="exception">Ошибка:</string>
-    <string name="error">Ошибка</string>
-    <string name="account_group">группа счетов</string>
-    <string name="currencies">Валюты</string>
-    <string name="accounts">Счета</string>
-    <string name="categories">Категории</string>
-    <string name="categories_month">Категории с начала месяца</string>
-    <string name="account_groups">Группы счетов</string>
-    <string name="action_button_label">+</string>
-    <string name="dictionaries">Справочники</string>
-    <string name="show_hidden_items">показывать скрытые</string>
-    <string name="dictionary_edit_button_label">#</string>
-    <string name="hidden">скрыто</string>
-    <string name="add_dictionary_button_label">Добавить</string>
-    <string name="account_action">Действия с счетом</string>
-    <string name="account_action_expense">Расход</string>
-    <string name="account_action_income">Доход</string>
-    <string name="account_action_transfer_from">Перевод из</string>
-    <string name="account_action_transfer_to">Перевод на</string>
-    <string name="action_button_transaction_item_label">#</string>
-    <string name="action_button_transfer_item_label">#</string>
-    <string name="transfer_from">Из </string>
-    <string name="transfer_to">В </string>
-    <string name="draft">Черновик</string>
-    <string name="toggle_all_button_label">Выбрать &#10;все</string>
-    <string name="toggle_none_button_label">Очистить</string>
-    <string name="commit_button_label">Сохранить</string>
-    <string name="delete_button_label">Удалить</string>
-    <string name="action_list">Список транзакций</string>
-    <string name="dialog_commit_title">Сохранение</string>
-    <string name="dialog_delete_title">Удаление</string>
-    <string name="dialog_commit_message">Сохранить %d запись(-ей)?</string>
-    <string name="dialog_delete_message">Удалить %d запись(-ей)?</string>
-    <string name="product_hint">Описание товара или услуги</string>
-    <string name="sum_hint">Сумма</string>
-    <string name="add_button_label">Добавить</string>
-    <string name="edit_button_label">Изменить</string>
-    <string name="cancel_button_label">Отмена</string>
-    <string name="account_from">счет из</string>
-    <string name="account_to">счет в</string>
-    <string name="sum_from_hint">Сумма списания</string>
-    <string name="sum_to_hint">Сумма зачисления</string>
-    <string name="dialog_yes">Да</string>
-    <string name="dialog_no">Нет</string>
-    <string name="dialog_ok">ОК</string>
-    <string name="action_expense">Расход</string>
-    <string name="action_income">Доход</string>
-    <string name="action_transfer">Перевод</string>
-    <string name="error_sum_parse">Неверный формат суммы</string>
-    <string name="error_sum_negative">Сума не может быть отрицательной</string>
-    <string name="actions">Транзакции</string>
-    <string name="date">Дата</string>
-    <string name="button_prev_day_label"><![CDATA[<]]></string>
-    <string name="button_next_day_label"><![CDATA[>]]></string>
-    <string name="currency_edit">Валюта - Редактирование</string>
-    <string name="currency_add">Валюта - Добавление</string>
-    <string name="account_edit">Счет - Редактирование</string>
-    <string name="account_add">Счет - Добавление</string>
-    <string name="category_edit">Категория - Редактирование</string>
-    <string name="category_add">Категория - Добавление</string>
-    <string name="account_group_edit">Группа счетов - Редактирование</string>
-    <string name="account_group_add">Группа счетов - Добавление</string>
-    <string name="error_currency_delete">Удаление запрещено. Необходимо удалить связаные счета.</string>
-    <string name="error_account_delete">Удаление запрещено. Необходимо удалить связаные транзакции и отвязать связаные группы счетов.</string>
-    <string name="error_category_delete">Удаление запрещено. Необходимо удалить связаные транзакции и категории-потомки.</string>
-    <string name="error_account_group_delete">Удаление запрещено. Необходимо отвязать связаные счета.</string>
-    <string name="name">Название</string>
-    <string name="symbol">Сокращенное обозначение</string>
-    <string name="is_not_visible">скрыто</string>
-    <string name="comment">Описание</string>
-    <string name="currency">Валюта</string>
-    <string name="account">Счет</string>
-    <string name="category">Категория</string>
-    <string name="sum_account">Начальная сумма</string>
-    <string name="parent">Родитель</string>
-    <string name="null_parent">корневой элемент в иерархии</string>
-    <string name="error_hierarchy_loop">Наличие циклов в иерархии недопустимо</string>
-    <string name="statistics">Статистика</string>
-    <string name="statistics_monthly">Статистика за месяц</string>
-    <string name="daily">По дням</string>
-    <string name="no_data">Данные отсутствуют</string>
-    <string name="month_average">Среднее за месяц</string>
+    <string name="loading_dialog_text">Please wait for operation to complete</string>
+    <string name="permission_not_granted">Permission not granted</string>
+    <string name="success">Success</string>
+    <string name="export_to">Export to </string>
+    <string name="import_from">Import from </string>
+    <string name="menu_actions">Transactions</string>
+    <string name="menu_draft">Draft</string>
+    <string name="menu_dictionaries">Dictionaries</string>
+    <string name="menu_import_export">Import/Export</string>
+    <string name="menu_statistics">Statistics</string>
+    <string name="menu_statistics_monthly">Statistics monthly</string>
+    <string name="menu_settings">Settings</string>
+    <string name="import_button_label">Import DB file</string>
+    <string name="export_button_label">Export DB file</string>
+    <string name="error_open_destination_file">Unable to open file </string>
+    <string name="error_create_destination_directories">Unable to create directory </string>
+    <string name="cause">Cause:</string>
+    <string name="exception">Error:</string>
+    <string name="error">Error</string>
+    <string name="account_group">group of accounts</string>
+    <string name="currencies">Currencies</string>
+    <string name="accounts">Accounts</string>
+    <string name="categories">Categories</string>
+    <string name="categories_month">From the beginning of the month</string>
+    <string name="account_groups">Groups of accounts</string>
+    <string name="dictionaries">Dictionaries</string>
+    <string name="show_hidden_items">show hidden</string>
+    <string name="hidden">hidden</string>
+    <string name="add_dictionary_button_label">Add</string>
+    <string name="account_action">Account actions</string>
+    <string name="account_action_expense">Expense</string>
+    <string name="account_action_income">Income</string>
+    <string name="account_action_transfer_from">Transfer from</string>
+    <string name="account_action_transfer_to">Transfer to</string>
+    <string name="transfer_from">From </string>
+    <string name="transfer_to">To </string>
+    <string name="draft">Draft</string>
+    <string name="toggle_all_button_label">Select &#10;all</string>
+    <string name="toggle_none_button_label">Clear</string>
+    <string name="commit_button_label">Save</string>
+    <string name="delete_button_label">Delete</string>
+    <string name="action_list">List of transactions</string>
+    <string name="dialog_commit_title">Saving</string>
+    <string name="dialog_delete_title">Deleting</string>
+    <string name="dialog_commit_message">Save %d item(-s)?</string>
+    <string name="dialog_delete_message">Delete %d item(-s)?</string>
+    <string name="product_hint">Description of product</string>
+    <string name="sum_hint">Sum</string>
+    <string name="add_button_label">Add</string>
+    <string name="edit_button_label">Edit</string>
+    <string name="cancel_button_label">Cancel</string>
+    <string name="account_from">account from</string>
+    <string name="account_to">account to</string>
+    <string name="sum_from_hint">Sum out</string>
+    <string name="sum_to_hint">Sum in</string>
+    <string name="dialog_yes">Yes</string>
+    <string name="dialog_no">No</string>
+    <string name="dialog_ok">OK</string>
+    <string name="action_expense">Expense</string>
+    <string name="action_income">Income</string>
+    <string name="action_transfer">Transfer</string>
+    <string name="error_sum_parse">Invalid format of sum</string>
+    <string name="error_sum_negative">Negative sum is not valid</string>
+    <string name="actions">Transactions</string>
+    <string name="date">Date</string>
+    <string name="currency_edit">Currency - Edit</string>
+    <string name="currency_add">Currency - Add</string>
+    <string name="account_edit">Account - Edit</string>
+    <string name="account_add">Account - Add</string>
+    <string name="category_edit">Category - Edit</string>
+    <string name="category_add">Category - Add</string>
+    <string name="account_group_edit">Group of accounts - Edit</string>
+    <string name="account_group_add">Group of accounts - Add</string>
+    <string name="error_currency_delete">Deletion prohibited. You need to delete linked accounts.</string>
+    <string name="error_account_delete">Deletion prohibited. You need to delete linked transactions and unlink linked account groups.</string>
+    <string name="error_category_delete">Deletion prohibited. You need to delete linked transactions and child categories.</string>
+    <string name="error_account_group_delete">Deletion prohibited. You need to unlink linked accounts.</string>
+    <string name="name">Name</string>
+    <string name="symbol">Alias</string>
+    <string name="is_not_visible">hidden</string>
+    <string name="comment">Comment</string>
+    <string name="currency">Currency</string>
+    <string name="account">Account</string>
+    <string name="category">Category</string>
+    <string name="sum_account">Initial sum</string>
+    <string name="parent">Parent</string>
+    <string name="null_parent">root element in hierarchy</string>
+    <string name="error_hierarchy_loop">Loops are not allowed in the hierarchy</string>
+    <string name="statistics">Statistics</string>
+    <string name="statistics_monthly">Statistics monthly</string>
+    <string name="daily">Daily</string>
+    <string name="no_data">No data</string>
+    <string name="month_average">Average for month</string>
+    <string name="settings">Settings</string>
+    <string name="language">Language</string>
+    <string name="night_mode">Night mode</string>
+    <string name="format_date_time_number">Display format</string>
+    <string name="format_number_decimal">Decimal divider</string>
+    <string name="format_number_thousand">Thousand divider</string>
+    <string name="format_date">Date format</string>
+    <string name="format_time">Time format</string>
+    <string-array name="languages">
+        <item>System</item>
+        <item>English</item>
+        <item>Russian (Русский)</item>
+        <item>Ukrainian (Українська)</item>
+    </string-array>
+    <string-array name="night_modes">
+        <item>System</item>
+        <item>On</item>
+        <item>Off</item>
+    </string-array>
 </resources>
