--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="menu_statistics">Statistics</string>
     <string name="menu_statistics_monthly">Statistics monthly</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_dictionary_currencies">Currencies</string>
+    <string name="menu_dictionary_categories">Categories</string>
+    <string name="menu_dictionary_accounts">Accounts</string>
+    <string name="menu_dictionary_account_groups">Groups of accounts</string>
     <string name="import_button_label">Import DB file</string>
     <string name="export_button_label">Export DB file</string>
     <string name="error_open_destination_file">Unable to open file </string>
@@ -101,6 +105,8 @@
     <string name="format_number_thousand">Thousand divider</string>
     <string name="format_date">Date format</string>
     <string name="format_time">Time format</string>
+    <string name="before">Before</string>
+    <string name="next">Next</string>
     <string-array name="languages">
         <item>System</item>
         <item>English</item>
