small fixes + draft total

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -131,6 +131,7 @@
     <string name="excel_categories_name">Назва</string>
     <string name="excel_categories_parent">Родитель</string>
     <string name="excel_categories_full">Повна назва</string>
+    <string name="draft_total_selected_label">Всього обрано:</string>
     <string-array name="languages">
         <item>Авто</item>
         <item>Англійська (English)</item>
