--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -131,6 +131,7 @@
     <string name="excel_categories_name">Название</string>
     <string name="excel_categories_parent">Родитель</string>
     <string name="excel_categories_full">Полное название</string>
+    <string name="draft_total_selected_label">Всего выбрано:</string>
     <string-array name="languages">
         <item>Язык системы</item>
         <item>Английский (English)</item>
