--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,7 @@
     <string name="excel_categories_name">Name</string>
     <string name="excel_categories_parent">Parent</string>
     <string name="excel_categories_full">Full name</string>
+    <string name="draft_total_selected_label">Selected total:</string>
     <string-array name="languages">
         <item>System</item>
         <item>English</item>
