--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -132,6 +132,7 @@
     <string name="excel_categories_parent">Родитель</string>
     <string name="excel_categories_full">Полное название</string>
     <string name="draft_total_selected_label">Всего выбрано:</string>
+    <string name="no_product">Отсутствует описание товара</string>
     <string-array name="languages">
         <item>Язык системы</item>
         <item>Английский (English)</item>
